fix(nav-mobile): amélioration du contraste du texte pour l’accessibilité Lighthouse

--- a/src/layout/_nav-mobile.scss
+++ b/src/layout/_nav-mobile.scss
@@ -41,7 +41,7 @@
 .nav-mobile-texte {
   font-size: 0.70rem;
   margin-top: 0.2rem;
-  color: #8a8a8a; /* ✔ Contraste correct */
+  color:#555555; 
 }
 
 /* Lien actif */
